--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "test",
   "version": "0.0.0",
   "dependencies": {
-    "url": "https://github.com/MichMich/MagicMirror"
+    "@MichMich/MagicMirror": "^2.14.0"
   }
 }
