--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Prettier Action
+      uses: creyD/prettier_action@v3.3
     - run: |
         Xvfb :99 -screen 0 1024x768x16 &
         export DISPLAY=:99
