--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
     
     - name: Prettier Action
       uses: creyD/prettier_action@v3.3
+      with:
+        # This part is also where you can pass other options, for example:
+        prettier_options: --write "**/*.*"
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
