--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     
 defaults:
   run:
-    working-directory: src    
+    working-directory:    
 
 jobs:
   build:
@@ -29,7 +29,7 @@ jobs:
       uses: creyD/prettier_action@v3.3
       with:
         # This part is also where you can pass other options, for example:
-        prettier_options: --write /*/*.*
+        prettier_options: --write **/*.{md, js}
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
