--- a/docs/_data/navbar.yml
+++ b/docs/_data/navbar.yml
@@ -1,10 +1,10 @@
 docs:
 
 - title: Home Page
-  url: index.md
+  url: /index.md
 
 - title: Archivio Documenti dei Requisiti
-  url: pages/ArchivioDocumentiDeiRequisiti.md
+  url: /pages/ArchivioDocumentiDeiRequisiti.md
 
 - title: Archivio BMC
-  url: pages/ArchivioBMC.md
+  url: /pages/ArchivioBMC.md
