tentativi con variabili yml (YAML)

--- a/docs/_data/navbar.yml
+++ b/docs/_data/navbar.yml
@@ -1,10 +1,12 @@
+endpoint: /MagicMirror-GBM
+
 docs:
 
 - title: Home Page
-  url: /index.md
+  url: {{ endpoint }}/index
 
 - title: Archivio Documenti dei Requisiti
-  url: /pages/ArchivioDocumentiDeiRequisiti.md
+  url: {{ endpoint }}/pages/ArchivioDocumentiDeiRequisiti
 
 - title: Archivio BMC
-  url: /pages/ArchivioBMC.md
+  url: {{ endpoint }}/pages/ArchivioBMC
