--- a/.github/workflows/jekyll-builder.yml
+++ b/.github/workflows/jekyll-builder.yml
@@ -1,10 +1,13 @@
-name: Jekyll builder
+name: Jekyll Builder
 
 on:
   push
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
-  jekyll:
+  Build-and-deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
