--- a/.github/workflows/jekyll-builder.yml
+++ b/.github/workflows/jekyll-builder.yml
@@ -1,7 +1,7 @@
 name: Jekyll Builder
 
 on:
-  push
+  push:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
