--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,7 +8,7 @@ name: Deploy Jekyll site to Pages
 
 defaults:
   run:
-    working-directory: ./docsite
+    working-directory: "./docsite"
 
 on:
   # Runs on pushes targeting the default branch
