--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,7 +8,7 @@ name: Deploy Jekyll site to Pages
 
 defaults:
   run:
-    working-directory: docsite
+    working-directory: ./docsite
 
 on:
   # Runs on pushes targeting the default branch
@@ -42,6 +42,7 @@ jobs:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - run: BUNDLE_GEMFILE="./docsite/Gemfile" bundle install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
