--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -6,9 +6,9 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll site to Pages
 
-defaults:
-  run:
-    working-directory: ./docsite
+# # defaults:
+# #   run:
+# #     working-directory: ./docsite
 
 on:
   # Runs on pushes targeting the default branch
