--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -6,9 +6,9 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll site to Pages
 
-# # defaults:
-# #   run:
-# #     working-directory: ./docsite
+defaults:
+  run:
+    working-directory: ./docsite
 
 on:
   # Runs on pushes targeting the default branch
@@ -42,7 +42,7 @@ jobs:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - run: BUNDLE_GEMFILE="./docsite/Gemfile" bundle install
+      - run: bundle install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
