--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,9 +44,7 @@ jobs:
           bundler-cache: false # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Run bundle install
-        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
-        with:
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        run: bundle cache
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
