--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -77,7 +77,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}/docsite
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
