--- a/.github/workflows/abc.yml
+++ b/.github/workflows/abc.yml
@@ -9,16 +9,16 @@
 #################################################################
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll site to Pages
+name: Deploy Jekyll site to Pages ABC
 
-defaults:
-  run:
-    working-directory: ./docsite
+# # defaults:
+# #   run:
+# #     working-directory: ./docsite
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["abcdefghilmnopqrstuvz"]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -39,10 +39,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Disregards "default working-directory" set above, because it is not needed here
+      # Setting: "path: ./docsite" is not needed here
       - name: Checkout
         uses: actions/checkout@v3
-      # Disregards "default working-directory" set above. Due to this, the "bundle install" command will be skipped
+      # Setting: "path ./docsite" is needed here but cannot be set. Due to this, the "bundle install" command will be skipped
       - name: Setup Ruby
         uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
         with:
@@ -50,23 +50,25 @@ jobs:
           # runs 'bundle install' and caches installed gems automatically
           # Setting to false will skip the command "bundle install". Should be put to false since "bundle install" is run in the next step
           bundler-cache: false
-      # Regards "default working-directory" set above
+      # Setting: "path: ./docsite" is needed here and set
       - name: Run bundle install
         # There's no point in running "bundle cache": the GitHub Action's runner gets destroyed after the workflow is done. Thus, no cache will be used
         run: bundle install
-      # Disregards "default working-directory" set above, because it is not needed here
+        with:
+          path: ./docsite
+      # Setting: "path: ./docsite" is needed here
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
-        with:
-          path: ./docsite
-      # Regards "default working-directory" set above
+        # # with:
+        # #   path: ./docsite
+      # Setting: "path: ./docsite" is needed here and set
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}/docsite"
         env:
           JEKYLL_ENV: production
-      # Disregards "default working-directory" set above. Due to this, the option "with path" is used
+      # Setting: "path: ./docsite" is needed here and set
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
