--- a/.github/workflows/acqua.yml
+++ b/.github/workflows/acqua.yml
@@ -16,11 +16,11 @@ jobs:
   first:
     runs-on: ubuntu-latest
     steps:
-      run: bundle
-      working-directory: ./docsite
+      - run: bundle
+        working-directory: ./docsite
       
   second:
     runs-on: ubuntu-latest
     steps:
-      run: bundle exec jekyll build
-      working-directory: ./docsite
+      - run: bundle exec jekyll build
+        working-directory: ./docsite
