--- a/.github/workflows/acqua.yml
+++ b/.github/workflows/acqua.yml
@@ -16,6 +16,8 @@ jobs:
   first:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3     
       - run: bundle
         working-directory: docsite
       
