--- a/.github/workflows/acqua.yml
+++ b/.github/workflows/acqua.yml
@@ -17,7 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3     
+        uses: actions/checkout@v3    
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa
+        with:
+          ruby-version: '3.0'
+          bundler-cache: false       
       - run: bundle
         working-directory: docsite
       
