--- a/.github/workflows/acqua.yml
+++ b/.github/workflows/acqua.yml
@@ -1,4 +1,14 @@
-name: acqua
+#################################################################
+#################################################################
+##                                                             ##
+##                                                             ##
+## Andrea Grandieri andreagrandieri.github.io                  ##
+##                                                             ##
+##                                                             ##
+#################################################################
+#################################################################
+
+name: BETA Deploy Jekyll site to Pages
 
 on:
   push:
@@ -16,17 +26,27 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  first:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Repository Checkout
         uses: actions/checkout@v3    
       - name: Setup Ruby
         uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa
         with:
           ruby-version: '3.0'
           bundler-cache: false       
-      - run: bundle
+      - name: Run "bundle"
+        run: bundle
         working-directory: docsite
-      - run: bundle exec jekyll build
+      - name: Run "bundle exec jekyll build"
+        run: bundle exec jekyll build
         working-directory: docsite 
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
+        working-directory: docsite
