--- a/.github/workflows/acqua.yml
+++ b/.github/workflows/acqua.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: docsite
       - name: Retrive "_site" output from runner
         uses: actions/upload-pages-artifact@v1
-        working-directory: docsite      
+        # working-directory: docsite      
 
   deploy:
     runs-on: ubuntu-latest
