--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -143,4 +143,7 @@ plugins:
 
 #################################################################
 
+# Specificy the baseurl for the site
+# Example: looking at: "andreagrandieri.github.io/MagicMirror-GBM" set baseurl: "MagicMirror-GBM"
+# Example: looking at: "andreagrandieri.github.io" do not specify a baseurl; "" will be the default
 baseurl: MagicMirror-GBM
