--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -90,8 +90,9 @@ gh_edit_link: false
 
 #################################################################
 
-# Color scheme supports "light" (default) and "dark"
-color_scheme: customlight
+# Color scheme should always start with: "custom_light"
+# Vanilla themes will never be used, even if the custom ones just import the vanilla one without making any adding: this is to make easy to add styles (in scss) in future
+color_scheme: custom_light
 
 #################################################################
 
