--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -8,6 +8,8 @@
 #################################################################
 #################################################################
 
+# show_downloads: true is not implemented for this theme
+
 # Title propagated to the entire site, but within the domain (with consideration of subdomains)
 title: MagicMirror-GBM
 
@@ -63,6 +65,10 @@ search:
 # The last entry of this list appears on the far right
 # Links as: "javascript:***" are not compatible with the "aux_links_new_tab" option set to true
 aux_links:
+  "<i class="fa-solid fa-down-long"></i> ZIP"
+    - https://github.com/AndreaGrandieri/MagicMirror-GBM/zipball/main
+  "<i class="fa-solid fa-down-long"></i> TAR"
+    - https://github.com/AndreaGrandieri/MagicMirror-GBM/tarball/main
   "<i class=\"fa-brands fa-github fa-3x\"></i>":
     - "https://github.com/AndreaGrandieri/MagicMirror-GBM"
   # # "<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>":
@@ -150,5 +156,3 @@ plugins:
 baseurl: MagicMirror-GBM
 
 #################################################################
-
-show_downloads: true
