--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -161,24 +161,26 @@ baseurl: MagicMirror-GBM
 # See: https://just-the-docs.github.io/just-the-docs/docs/configuration/#callouts
 # See: https://just-the-docs.github.io/just-the-docs/docs/ui-components/callouts/
 
+# e.g.:
+# # callouts_level: quiet # or loud
 # # callouts:
-# #   motto:
-# #     title: Motto
+# #   highlight:
+# #     color: yellow
+# #   important:
+# #     title: Important
 # #     color: blue
+# #   new:
+# #     title: New
+# #     color: green
+# #   note:
+# #     title: Note
+# #     color: purple
+# #   warning:
+# #     title: Warning
+# #     color: red
 
-callouts_level: quiet # or loud
+callouts_level: quiet
 callouts:
-  highlight:
-    color: yellow
-  important:
-    title: Important
+  motto:
+    title: Motto
     color: blue
-  new:
-    title: New
-    color: green
-  note:
-    title: Note
-    color: purple
-  warning:
-    title: Warning
-    color: red
