--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -189,7 +189,7 @@ callouts:
     # To define a custom title, use class: "{: .motto-title}"
     title: Motto
     # color: purple
-    color: grey-lt
+    color: grey-dk
   # Warning: highlight the need of particular attention to the interested content
   warning:
     title: Warning
@@ -198,3 +198,5 @@ callouts:
   note:
     title: Note
     color: blue
+  generic-purpose-highlighting:
+    color: grey-lt
