--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -103,7 +103,7 @@ gh_edit_link: true
 
 # Color scheme should always start with: "custom_light"
 # Vanilla themes will never be used, even if the custom ones just import the vanilla one without making any adding: this is to make easy to add styles (in scss) in future
-color_scheme: custom_light
+color_scheme: dark
 
 #################################################################
 
