--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -28,17 +28,22 @@ title: MagicMirror-GBM
 aux_links:
   "<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">ZIP</div>":
     - https://github.com/AndreaGrandieri/MagicMirror-GBM/zipball/main
+    - true
   "<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">TAR</div>":
     - https://github.com/AndreaGrandieri/MagicMirror-GBM/tarball/main
+    - true
   "<i class=\"fa-brands fa-github fa-3x\"></i>":
     - "https://github.com/AndreaGrandieri/MagicMirror-GBM"
+    - true
   "<i class=\"fa-solid fa-house fa-3x\"></i>":
     - "https://andreagrandieri.github.io/"
-  # # "<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>":
-  # #   - "javascript:themeModeSwitcher();"
+    - false
+  "<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>":
+    - "javascript:themeModeSwitcher();"
+    - false
 
 # Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: true
+# # aux_links_new_tab: true
 
 #################################################################
 
