--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -24,14 +24,17 @@ title: MagicMirror-GBM
 # Aux links are placed in the upper right corner of the site and are essentially simple links
 # Aux links for the upper right navigation
 # The last entry of this list appears on the far right
-# Links as: "javascript:***" are not compatible with the "aux_links_new_tab" option set to true
-aux_links: [
-  link1: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">ZIP</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/zipball/main, true],
-  link2: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">TAR</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/tarball/main, true],
-  link3: ["<i class=\"fa-brands fa-github fa-3x\"></i>", "https://github.com/AndreaGrandieri/MagicMirror-GBM", true],
-  link4: ["<i class=\"fa-solid fa-house fa-3x\"></i>", "https://andreagrandieri.github.io/", false],
-  link5: ["<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>", "javascript:themeModeSwitcher();", false]
-]
+# [DEPRECATED] Links as: "javascript:***" are not compatible with the "aux_links_new_tab" option set to true
+# Use the following syntax: linkN: ["HTML to be shown", "link", true/false (true: open in new tab, false: open in the same tab)]
+# Example: aux_links: [link1: ["link1", "#", true], link2: ["link2", "#", false]]
+# To leave empty, use: aux_links: []
+# # aux_links: [
+# #   link1: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">ZIP</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/zipball/main, true],
+# #   link2: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">TAR</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/tarball/main, true],
+# #   link3: ["<i class=\"fa-brands fa-github fa-3x\"></i>", "https://github.com/AndreaGrandieri/MagicMirror-GBM", true],
+# #   link4: ["<i class=\"fa-solid fa-house fa-3x\"></i>", "https://andreagrandieri.github.io/", false],
+# #   link5: ["<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>", "javascript:themeModeSwitcher();", false]
+# # ]
 
 # Makes Aux links open in a new tab. Default is false
 # # aux_links_new_tab: true
