--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -36,6 +36,8 @@ title: MagicMirror-GBM
 # #   link5: ["<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>", "javascript:themeModeSwitcher();", false]
 # # ]
 
+aux_links: []
+
 # Makes Aux links open in a new tab. Default is false
 # # aux_links_new_tab: true
 
