--- a/docsite/_config.yml
+++ b/docsite/_config.yml
@@ -27,16 +27,14 @@ title: MagicMirror-GBM
 # [DEPRECATED] Links as: "javascript:***" are not compatible with the "aux_links_new_tab" option set to true
 # Use the following syntax: linkN: ["HTML to be shown", "link", true/false (true: open in new tab, false: open in the same tab)]
 # Example: aux_links: [link1: ["link1", "#", true], link2: ["link2", "#", false]]
-# To leave empty, use: aux_links: []
-# # aux_links: [
-# #   link1: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">ZIP</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/zipball/main, true],
-# #   link2: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">TAR</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/tarball/main, true],
-# #   link3: ["<i class=\"fa-brands fa-github fa-3x\"></i>", "https://github.com/AndreaGrandieri/MagicMirror-GBM", true],
-# #   link4: ["<i class=\"fa-solid fa-house fa-3x\"></i>", "https://andreagrandieri.github.io/", false],
-# #   link5: ["<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>", "javascript:themeModeSwitcher();", false]
-# # ]
-
-aux_links: []
+# To leave empty, use: aux_links: [] or just do not specify the option itself
+aux_links: [
+  link1: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">ZIP</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/zipball/main, true],
+  link2: ["<i class=\"fa-solid fa-down-long fa-3x\"></i> <div class=\"fs-5\">TAR</div>", https://github.com/AndreaGrandieri/MagicMirror-GBM/tarball/main, true],
+  link3: ["<i class=\"fa-brands fa-github fa-3x\"></i>", "https://github.com/AndreaGrandieri/MagicMirror-GBM", true],
+  link4: ["<i class=\"fa-solid fa-house fa-3x\"></i>", "https://andreagrandieri.github.io/", false],
+  link5: ["<div id=\"lightdarkSwitcherButton\"><i class=\"fa-solid fa-moon fa-3x\"></i></div>", "javascript:themeModeSwitcher();", false]
+]
 
 # Makes Aux links open in a new tab. Default is false
 # # aux_links_new_tab: true
