RepoLink version B: site assets updated

--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ heading_anchors: true
 # It appears at the bottom of every page's main content
 # Define the footer content in the _includes/footer_custom.html file
 
-# Back to top link
+# Back to top link:
 back_to_top: true
 back_to_top_text: "Back to top"
 
